components/rhbk/keycloak-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: '8'
